--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
   </head>
   <body>
     <h1>Dom Array Method</h1>
+    <div class="container">
+      <aside>
+        <button id="add-user">Add User</button>
+        <button id="double-money">Double Money</button>
+        <button id="show-millionaires">Show Only Millionaires</button>
+        <button id="sort">Sort By Richest</button>
+        <button id="calculate-wealth">Calculate Entire Wealth</button>
+      </aside>
+      <main id="main">
+        <h2><strong>Person</strong>Wealth</h2>
+      </main>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
